# gookme

./: .gitignore  404.html  CONTRIBUTING.md  README.md  go.mod  go.sum  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build-and-release.yml  check-assets-sync.yml  ci-format.yml  ci-lint.yml  ci-test.yml  deploy-docs.yml
docs/: examples.md  features.md  getting-started.md  index.md  reference.md
examples/: index.html
features/: index.html
getting-started/: index.html
reference/: index.html
scripts/: commit-msg.sh  install.ps1  install.sh  pre-commit.sh
search/: search_index.json
