[project]
name = "gookme"
version = "0.1.0"
description = ""
authors = [{ name = "LMaxence", email = "lecanu.maxence@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "mkdocs-material>=9.5.33,<10",
    "mkdocs>=1.6.0,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
